# videotrim

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: audio.rs  cli.rs  editor.rs  lib.rs  llm.rs  main.rs  spinner.rs  transcibe.rs  types.rs
