[package]
name = "rust_video_editor"
version = "0.1.0"
edition = "2024"


[dependencies]
ollama-rs = "0.3.5"
whisper-rs = "0.16.0"
tokio = { version = "1.52.3", features = ["full"] }
indicatif = "0.18.5"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
clap = {version ="4.6.1", features = ["derive"]}
hf-hub = "0.5.0"
hound = "3.5.1"
reqwest = { version = "0.13.4", features = ["stream"] }
dirs = "6.0.0"
schemars = "1.2.1"
